force-app/main/default/objects/EC_AccountGroup_Category__c/EC_AccountGroup_Category__c.object-meta.xml
<CustomObject>
    <description>Junction Object between CC Category((CloudCraze Managed package object) and CC Account Group (CloudCraze Managed package object)</description>
    <label>Account Group Category</label>
    <nameField>
        <label>EC Account Group Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Group Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>