force-app/main/default/objects/EC_AccountGroup_Category__c/fields/EC_AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>EC_AccountGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Group</label>
    <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
    <relationshipLabel>Account Group Categories</relationshipLabel>
    <relationshipName>EC_Account_Group_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>