force-app/main/default/objects/EC_AccountGroup_Category__c/fields/EC_Currency__c.field-meta.xml
<CustomField>
    <fullName>EC_Currency__c</fullName>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>