force-app/main/default/objects/EC_AccountGroup_Category__c/fields/EC_Storefront__c.field-meta.xml
<CustomField>
    <fullName>EC_Storefront__c</fullName>
    <label>Storefront</label>
    <length>100</length>
    <type>Text</type>
</CustomField>